tests/tooling/fixtures/native/recovery/positive/octal_literal_uppercase_prefix.objc3
module OctalLiteralUppercasePrefix;

let mask = 0O12;
let shift = 0O1;

fn main() -> i32 {
  return (mask >> shift) + 0o1;
}
