tests/tooling/fixtures/native/recovery/negative/negative_assignment_parser_missing_global_initializer_reference_rhs.objc3
// Expected diagnostic code(s): O3P103.
module NegativeAssignmentParserMissingGlobalInitializerReferenceRhs;

let seed = 1;
let derived = seed + ;

fn main() -> i32 {
  return seed;
}
